--- a/Verslagen/1e verslag/template.tex
+++ b/Verslagen/1e verslag/template.tex
@@ -27,14 +27,19 @@
 
 \chapter{Domain analysis}\label{sec:domain}
 \section{Domain models}
-This section shows the domain model(s).
+This sections contains the domain models for our system. For readability reasons, the model is split in two parts. In the first figure the general domain model is shown, in the second figure the model cotaining the hardware and information flow is depicted.
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=\textwidth, height=11cm, angle=90]{Domain_model.pdf}
-    \caption{The domain model for the system.}\label{fig:domain_model}
+    \includegraphics[width=\textwidth, height=9cm, angle=90]{Domain_model.pdf}
+    \caption{Domain model: General}\label{fig:domain_model1}
 \end{figure}
 
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\textwidth, height=9cm, angle=90]{Hardware_and_information_flow.pdf}
+    \caption{Domain model: Hardware and information flow}\label{fig:domain_model2}
+\end{figure}
 \section{Domain constraints}
 In this section we provide additional domain constraints.
 
