--- a/Verslagen/1e verslag/template.tex
+++ b/Verslagen/1e verslag/template.tex
@@ -1,4 +1,4 @@
-\documentclass[english,peerreview]{sareport}
+\documentclass[english]{sareport}
 % use the option peerreview for creating an anonymized version of your report
 % E.g., \documentclass[english,peerreview]{sareport}
 
@@ -27,7 +27,7 @@
 
 \chapter{Domain analysis}\label{sec:domain}
 \section{Domain models}
-This sections contains the domain models for our system. For readability reasons, the model is split in two parts. In the first figure the general domain model is shown, in the second figure the model cotaining the hardware and information flow is depicted.
+This sections contains the domain models for our system. For readability reasons, the model is split into two parts. In the first figure the general domain model is shown, in the second figure the model containing the hardware and information flow is illustrated.
 
 \begin{figure}[H]
     \centering
