--- a/Verslagen/1e verslag/template.tex
+++ b/Verslagen/1e verslag/template.tex
@@ -1,4 +1,4 @@
-\documentclass[english,peerreview]{sareport}
+\documentclass[english]{sareport}
 % use the option peerreview for creating an anonymized version of your report
 % E.g., \documentclass[english,peerreview]{sareport}
 
@@ -27,29 +27,19 @@
 
 \chapter{Domain analysis}\label{sec:domain}
 \section{Domain models}
-This section shows the domain model(s).
+This sections contains the domain models for our system. For readability reasons, the model is split into two parts. In the first figure the general domain model is shown, in the second figure the model containing the hardware and information flow is illustrated.
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=\textwidth, height=11cm, angle=90]{Domain_model.pdf}
-    \caption{The domain model for the system.}\label{fig:domain_model}
+    \includegraphics[width=\textwidth, height=9cm, angle=90]{Domain_model.pdf}
+    \caption{Domain model: General}\label{fig:domain_model1}
 \end{figure}
 
-\section{Domain constraints}
-In this section we provide additional domain constraints.
-
-\begin{itemize}
-    \item A customer organization can only subscribe to an application that is already registered with the system.
-    \item A end-user only receives notifications from applications that the customer organization he works for is subscribed to. He only receives these notifcations if he/she is an individual who should receive notifications as configured in the application by the previously mentioned customer organization.
-    \item The Online Service can only communicate with peripherals via their gateway.
-    \item The connectivity between the network manager and the attached devices is done via 6LoWPAN.
-    \item Application developers only receive rejection notification about the applications they want to deploy.
-    \item An application should be idle until all the necesarry hardware is available and if the hardware is available it should be activated automatically. For example, a fire application requires at least 2 specific sensors per room.
-    \item If a component of the hardware fails, the system should automatically switch to a nearby, similar device if possible, based on the topology provided by the infrastructure owner.
-    \item Only persons who are allowed to do so, can issue commands to an application.
-    \item Gateways contain limited storage space. Whenever they're runnin low on space, the oldest information should be removed.
-    \item When communicating with the system, customer organisations, infrastructure owners, system administrators and application providers each have their own, personal, dashboard to do so.
-\end{itemize}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\textwidth, height=9cm, angle=90]{Hardware_and_information_flow.pdf}
+    \caption{Domain model: Hardware and information flow}\label{fig:domain_model2}
+\end{figure}
 
 \section{Domain constraints}
 In this section we provide additional domain constraints.
