--- a/Verslagen/1e verslag/template.tex
+++ b/Verslagen/1e verslag/template.tex
@@ -1,4 +1,4 @@
-\documentclass[english]{sareport}
+\documentclass[english,peerreview]{sareport}
 % use the option peerreview for creating an anonymized version of your report
 % E.g., \documentclass[english,peerreview]{sareport}
 
@@ -27,19 +27,29 @@
 
 \chapter{Domain analysis}\label{sec:domain}
 \section{Domain models}
-This sections contains the domain models for our system. For readability reasons, the model is split into two parts. In the first figure the general domain model is shown, in the second figure the model containing the hardware and information flow is illustrated.
+This section shows the domain model(s).
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=\textwidth, height=9cm, angle=90]{Domain_model.pdf}
-    \caption{Domain model: General}\label{fig:domain_model1}
+    \includegraphics[width=\textwidth, height=11cm, angle=90]{Domain_model.pdf}
+    \caption{The domain model for the system.}\label{fig:domain_model}
 \end{figure}
 
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=\textwidth, height=9cm, angle=90]{Hardware_and_information_flow.pdf}
-    \caption{Domain model: Hardware and information flow}\label{fig:domain_model2}
-\end{figure}
+\section{Domain constraints}
+In this section we provide additional domain constraints.
+
+\begin{itemize}
+    \item A customer organization can only subscribe to an application that is already registered with the system.
+    \item A end-user only receives notifications from applications that the customer organization he works for is subscribed to. He only receives these notifcations if he/she is an individual who should receive notifications as configured in the application by the previously mentioned customer organization.
+    \item The Online Service can only communicate with peripherals via their gateway.
+    \item The connectivity between the network manager and the attached devices is done via 6LoWPAN.
+    \item Application developers only receive rejection notification about the applications they want to deploy.
+    \item An application should be idle until all the necesarry hardware is available and if the hardware is available it should be activated automatically. For example, a fire application requires at least 2 specific sensors per room.
+    \item If a component of the hardware fails, the system should automatically switch to a nearby, similar device if possible, based on the topology provided by the infrastructure owner.
+    \item Only persons who are allowed to do so, can issue commands to an application.
+    \item Gateways contain limited storage space. Whenever they're runnin low on space, the oldest information should be removed.
+    \item When communicating with the system, customer organisations, infrastructure owners, system administrators and application providers each have their own, personal, dashboard to do so.
+\end{itemize}
 
 \section{Domain constraints}
 In this section we provide additional domain constraints.
@@ -208,6 +218,7 @@ The user logs into his Customer Organization dashboard and configures the method
 The user logs into his dashboard and requests an overview of previously received notifications and alarms. The Online Service provides this overview.
 
 \paragraph{UC23: Synchronize Online Service and gateway}
+TODO nodig?
 The gateway sends all data acquired between this moment and the last synchronization moment to the Online Service.
 
 \paragraph{UC24: Get application overview}
@@ -216,59 +227,15 @@ The user logs into his Application Provider dashboard and request an overview th
 \paragraph{UC25: Interact with Application}
 TODO
 
+\newpage
 
 \section{Detailed use cases}
-\subsection{\emph{UC8}: Subscribe to application}
-\begin{itemize}
-    \item \textbf{Name:} Subscribe to application
-    \item \textbf{Primary actor:} Customer Organization
-    \item \textbf{Secondary actor(s)}: 
-	\begin{itemize}
-		\item Infrastructure Owner: Needs to approve/reject the subscription if extra hardware is needed
-	\end{itemize}
-    \item \textbf{Interested parties:} 
-        \begin{itemize}
-            \item \textit{System:} wants to authenticate its users.
-        \end{itemize}
-
-    \item \textbf{Preconditions:}
-        \begin{itemize}
-            \item The Customer Organization is registered on the Online Service (UC7).
-            \item The member of the Customer Organization is logged into hit Customer Organization dashboard (UC1).
-        \end{itemize}
-
-    \item \textbf{Postconditions:}
-        \begin{itemize}
-            \item The Customer Organization is subscribed to the application.
-
-        \end{itemize}
-
-        
-    \item \textbf{Main scenario:} 
-    \begin{enumerate}
-       \item The member of the Customer Organization indicates he wants to subscribe to an application.
-       \item The Online Service presents the user with a means to search for and subscribe to applications.
-       \item The user subscribes to an application.
-	\item The Online Service saves the subscription.
-	\item The Online Service notifies the user that the application will be activated once the required peripherals are installed.
-	\item The Online Service notifies the Infrastructure Owner that new peripherals are needed (\textbf{Include:} UC10: Process peripheral request).
-	\item The Infrastructure Owner installs the hardware (\textbf{Include:} UC11: Install new hardware).
-    \item The Infrastructure Owner allocates the new peripherals to the Customer Organization (\textbf{Include:} UC17: Allocate peripherals )
-	\item The Online Service activates the application
-	\item The Online Service notifies the user that the application is activated.
-    \end{enumerate}
-
-    \item \textbf{Alternative scenarios:} 
-    \begin{enumerate}
-        \item [3b.] Alternative at step 3
-    \end{enumerate}
-\end{itemize}
 
 \subsection{\emph{UC4}: Add application}
 \begin{itemize}
     \item \textbf{Name:} Add application
     \item \textbf{Primary actor:} Application Provider
-    \item \textbf{Secondary actor(s)}: System Administrator
+    \item \textbf{Secondary actor(s)}: System Administrator, Online Service
     \item \textbf{Interested parties:} 
         \begin{itemize}
             \item \textit{Online Service:} wants to authenticate its users and keep track of applications.
@@ -307,12 +274,90 @@ TODO
     \end{enumerate}
 \end{itemize}
 
+\subsection{\emph{UC8}: Subscribe to application}
+\begin{itemize}
+    \item \textbf{Name:} Subscribe to application
+    \item \textbf{Primary actor:} Customer Organization
+    \item \textbf{Secondary actor(s)}: Infrastructure owner, Online Service
+    \item \textbf{Interested parties:} 
+        \begin{itemize}
+            \item \textit{System:} wants to authenticate its users.
+        \end{itemize}
+
+    \item \textbf{Preconditions:}
+        \begin{itemize}
+            \item The Customer Organization is registered on the Online Service (UC7).
+            \item The member of the Customer Organization is logged into hit Customer Organization dashboard (UC1).
+        \end{itemize}
+
+    \item \textbf{Postconditions:}
+        \begin{itemize}
+            \item The Customer Organization is subscribed to the application.
+
+        \end{itemize}
+
+        
+    \item \textbf{Main scenario:} 
+    \begin{enumerate}
+       \item The member of the Customer Organization indicates he wants to subscribe to an application.
+       \item The Online Service presents the user with a means to search for and subscribe to applications.
+       \item The user subscribes to an application.
+	\item The Online Service saves the subscription.
+	\item The Online Service notifies the user that the application will be activated once the required peripherals are installed.
+	\item The Online Service notifies the Infrastructure Owner that new peripherals are needed (\textbf{Include:} UC10: Process peripheral request).
+	\item The Infrastructure Owner installs the hardware (\textbf{Include:} UC11: Install new hardware).
+    \item The Infrastructure Owner allocates the new peripherals to the Customer Organization (\textbf{Include:} UC17: Allocate peripherals )
+	\item The Online Service activates the application
+	\item The Online Service notifies the user that the application is activated.
+    \end{enumerate}
+
+    \item \textbf{Alternative scenarios:} 
+    \begin{enumerate}
+        \item [3b.] Alternative at step 3
+    \end{enumerate}
+\end{itemize}
+
+
+\subsection{\emph{UC10}: Process hardware request}
+\begin{itemize}
+    \item \textbf{Name:} Process peripheral request
+    \item \textbf{Primary actor:} Infrastructure Owner
+    \item \textbf{Secondary actor(s)}: Online Service
+    \item \textbf{Interested parties:} 
+        \begin{itemize}
+            \item \textit{Customer Organization:} TODO The user who requested the hardware?
+        \end{itemize}
+
+    \item \textbf{Preconditions:}
+        \begin{itemize}
+            \item The Infrastructure Owner received a request for new hardware.
+            \item The Infrastructure Owner is registered on the Online Service (UC6).
+            \item The Infrastructure Owner is logged into his Infrastructure Owner dashboard. (UC1)
+        \end{itemize}
+
+    \item \textbf{Postconditions:}
+        \begin{itemize}
+            \item The requester of the hardware is notified about whether or not the Infrastructure Owner approved the request.
+        \end{itemize}
+        
+    \item \textbf{Main scenario:} 
+    \begin{enumerate}
+       \item The Infrastructure Owner approves the request.
+       \item The Online Service orders the hardware from SIoTIP.
+       \item The Online Service notifies the requester of the hardware about the decision.
+    \end{enumerate}
+
+    \item \textbf{Alternative scenarios:} 
+    \begin{enumerate}
+        \item [1b1.] The Infrastructure Owner rejects the request, resume at step 3.
+    \end{enumerate}
+\end{itemize}
 
 \subsection{\emph{UC11}: Install new hardware}
 \begin{itemize}
     \item \textbf{Name:} Install new hardware
     \item \textbf{Primary actor:} Infrastructure Owner
-    \item \textbf{Secondary actor(s)}: secondary actor(s)
+    \item \textbf{Secondary actor(s)}: 
     \item \textbf{Interested parties:} 
         \begin{itemize}
             \item \textit{Online Service:}  wants to authenticate its users and keep track of all hardware.
@@ -342,40 +387,39 @@ TODO
     \end{enumerate}
 \end{itemize}
 
-\subsection{\emph{UC10}: Process hardware request}
+
+\subsection{\emph{UC17}: Allocate peripherals}
 \begin{itemize}
-    \item \textbf{Name:} Process peripheral request
+    \item \textbf{Name:} Allocate peripherals
     \item \textbf{Primary actor:} Infrastructure Owner
-    \item \textbf{Secondary actor(s)}: SIoTIP Platform
+    \item \textbf{Secondary actor(s)}: Online Service
     \item \textbf{Interested parties:} 
         \begin{itemize}
-            \item \textit{Customer Organization:} TODO The user who requested the hardware?
+             \item \textit{Online Service:}  wants to authenticate its users and keep track of all allocations.
         \end{itemize}
 
     \item \textbf{Preconditions:}
         \begin{itemize}
-            \item The Infrastructure Owner received a request for new hardware.
             \item The Infrastructure Owner is registered on the Online Service (UC6).
-            \item The Infrastructure Owner is logged into his Infrastructure Owner dashboard.
+            \item The Infrastructure Owner is logged into his Infrastructure Owner dashboard. (UC1)
         \end{itemize}
 
     \item \textbf{Postconditions:}
         \begin{itemize}
-            \item The requester of the hardware is notified about whether or not the Infrastructure Owner approved the request.
+            \item TODO?
         \end{itemize}
+
         
     \item \textbf{Main scenario:} 
     \begin{enumerate}
-       \item The Infrastructure Owner approves the request.
-       \item The Online Service orders the hardware from SIoTIP.
-       \item The Online Service notifies the requester of the hardware about the decision.
-    \end{enumerate}
-
-    \item \textbf{Alternative scenarios:} 
-    \begin{enumerate}
-        \item [1b1.] The Infrastructure Owner rejects the request, resume at step 3.
+       \item The Infrastructure Owner indicates he wants to allocate or withhold peripherals to/from Customer Organizations.
+       \item The Online Service presents the user with a means to do this.
+       \item The Infrastructure Owner allocates/withholds peripherals to/from Customer Organizations.
+       \item The Online Service activates any application in a Customer Organization which needed the peripherals allocated to that Customer Organization.
+       \item The Online Service deactivates any application in a Customer Organization which needed the peripherals withheld from that Customer Organization.
     \end{enumerate}
 \end{itemize}
+
 
 \chapter{Non-functional requirements}\label{sec:non-functional}
 In this section, we model the non-functional requirements for the system in the
