--- a/Verslagen/1e verslag/template.tex
+++ b/Verslagen/1e verslag/template.tex
@@ -172,7 +172,7 @@ The organization contacts or is contacted by SIoTIP and provides it's billing an
 The user logs into his Customer Organization dashboard, subscribes to the application and provides the needed information. The user is informed by the Online Service that the application will be activated once the required peripherals are installed. The Online Service checks whether or not the customer organization has access to all the peripherals needed for the application. If not, the infrastructure owner is automatically notified of the subscription and the peripherals and gateways needed for that application (see UC10: process hardware request). Once all required hardware is installed, the application is activated and the user is notified.
 
 \paragraph{UC9: Unsubscribe from application}
-The user logs into his Customer organization dashboard and unsubscribes from the application. TODO notification nodig? The user is informed by the Online Service that the application will be deactivated.
+The user logs into his Customer organization dashboard and unsubscribes from the application. \todo{notification nodig?} The user is informed by the Online Service that the application will be deactivated.
 
 \paragraph{UC10: Process hardware request}
 The Infrastructure Owner is notified of a new request for peripherals. The infrastructure owner approves or rejects the purchase of the hardware and a notification of the decision is sent to the user which requested the peripherals. If the infrastructure owner approved the request, the hardware is ordered from SIoTIP.
@@ -188,20 +188,19 @@ The user logs in to his Customer Organization dashboard and assigns users to an 
 Nodig?
 
 \paragraph{UC14: Transmit data}
-TODO nodig als use case?
 The sensor sends data to the corresponding gateway. The gateway stores the data and makes it available to all applications running on that gateway.
 
 \paragraph{UC15: Get invoice overview}
 The user logs into his Customer Organization dashboard and selects the option to show his Customer Organization's invoice overview. The Online Service then shows an overview of all the Customer Organization's invoices.
 
 \paragraph{UC16: Edit topology}
-The user logs into his Infrastructure Owner dashboard and selects the option to edit the his building's (TODO meerdere buildings?) topology. When the user is done editing the topology, the updated topology will be saved in the Online Service.
+The user logs into his Infrastructure Owner dashboard and selects the option to edit the his building's \todo{meerdere buildings?} topology. When the user is done editing the topology, the updated topology will be saved in the Online Service.
 
 \paragraph{UC17: Allocate peripherals}
 The user logs into his Infrastructure Owner dashboard and selects the option to allocate peripherals to Customer Organizations. He then assigns access rights to the Customer Organizations in his building to use the new peripherals. The Online Service automatically activates any application of that Customer Organizaion which needed the newly allocated peripherals in order to run. Conversely, if a peripheral gets withheld from a Customer Organization, the Onlice Service deactivates any application of that Customer Organization which needed the withholded peripheral to function properly.
 
 \paragraph{UC18: Develop application}
-TODO nodig? 
+\todo{nodig?}
 The user logs into his Application Provider dashboard and indicates he wants to develop an application.
 The Online Service provides the user with a development environment.
 
@@ -209,7 +208,7 @@ The Online Service provides the user with a development environment.
 An event causes the platform to misbehave. The Online Service detects this event and sends a notification to the System Administrator(s).
 
 \paragraph{UC20: Resolve application failure}
-An event causes an application to misbehave. The Online Service detects this event and sends a notification to the System Administrator(s). TODO ook notifiation naar app provider?
+An event causes an application to misbehave. The Online Service detects this event and sends a notification to the System Administrator(s). \todo{ook notifiation naar app provider?}
 
 \paragraph{UC21: Configure method of notification delivery}
 The user logs into his Customer Organization dashboard and configures the method of notification delivery. The Online Service will save the changes made.
@@ -218,14 +217,14 @@ The user logs into his Customer Organization dashboard and configures the method
 The user logs into his dashboard and requests an overview of previously received notifications and alarms. The Online Service provides this overview.
 
 \paragraph{UC23: Synchronize Online Service and gateway}
-TODO nodig?
+\todo{nodig?}
 The gateway sends all data acquired between this moment and the last synchronization moment to the Online Service.
 
 \paragraph{UC24: Get application overview}
 The user logs into his Application Provider dashboard and request an overview their applications. The Online Service provides this overview.
 
 \paragraph{UC25: Interact with Application}
-TODO
+\todo
 
 \newpage
 
